# ESurfingClient-CVersion

./: .gitignore  CMakeLists.txt  Client.c  Compile.md  Constants.c  Desktop.md  DialerApp.c  NetClient.c  NetworkStatus.c  OpenWRT.md  OpenWRT_mwan3.md  PlatformUtils.c  README.md  States.c  UpdateLogs.md  Windows&Linux.md  build-mipsel_24kc-openwrt_21.02.7.sh  build-mipsel_24kc-openwrt_23.05.0.sh  build-x64-Linux.sh  build-x86-64-openwrt-21.02.7.sh  build-x86-64-openwrt-22.03.7.sh  build-x86_64-openwrt-22.03.7.sh  build-x86_64-openwrt-24.10.4.sh  menuconfig.config  vcpkg.json
.github/ISSUE_TEMPLATE/: 报告-bug.md  提问问题.md  文档补充.md  新架构适配.md
.github/workflows/: build-all-platforms.yml  build-all-targets.yml  build-arm64-macos.yml  build-desktop-arm64-macos.yml  build-desktop-x86_64-linux.yml  build-desktop-x86_64-macos.yml  build-desktop-x86_64-windows.yml  build-macOS.yml  build-mipsel_24kc-openwrt-21.02.7.yml  build-mipsel_24kc-openwrt-23.05.0.yml  build-mipsel_24kc-openwrt-24.10.4.yml  build-mipsel_24kc_openwrt-21.02.7.yml  build-openwrt-19.07.0to22.03.7-ramips-mt7621.yml  build-openwrt-19.07.0to22.03.7-x86-64.yml  build-openwrt-19.07.0~22.03.7-ramips-mt7621.yml  build-openwrt-19.07.0~22.03.7-x86-64.yml  build-openwrt-21.02.7-ramips-mt7621.yml  build-openwrt-21.02.7-x86-64.yml  build-openwrt-21.02.7.yml  build-openwrt-22.03.7-x86-64.yml  build-openwrt-23.05.0-ramips-mt7621.yml  build-openwrt-23.05.0.yml  build-openwrt-23.05.0to24.10.5-mediatek-filogic.yml  build-openwrt-23.05.0to24.10.5-ramips-mt7621.yml  build-openwrt-23.05.0to24.10.5-x86-64.yml  build-openwrt-23.05.0to24.10.6-mediatek-filogic.yml  build-openwrt-23.05.0to24.10.6-ramips-mt7621.yml  build-openwrt-23.05.0to24.10.6-x86-64.yml  build-openwrt-23.05.0~24.10.5-mediatek-filogic.yml  build-openwrt-23.05.0~24.10.5-ramips-mt7621.yml  build-openwrt-23.05.0~24.10.5-x86-64.yml  build-openwrt-24.10.4-mediatek-filogic.yml  build-openwrt-24.10.4-ramips-mt7621.yml  build-openwrt-24.10.4-x86-64.yml  build-openwrt-apk-mediatek_filogic.yml  build-openwrt-apk-qualcommax_ipq60xx.yml  build-openwrt-apk-ramips_mt7621.yml  (+31 more)
esurfing/: CMakeLists.txt  Main.c
esurfing/inc/: DialerClient.h  NetClient.h  Session.h  States.h
esurfing/inc/cipher/: CipherInterface.h  KeyData.h
esurfing/inc/cipher/impl/: aes_cbc.h  aes_cbc_pc.h  aes_ecb_pc.h  des_ecb_six_pc.h  desede_cbc.h  desede_cbc_pc.h  desede_ecb.h  mod_xtea.h  mod_xtea_cbc_triple_pc.h  mod_xtea_pc.h  sm4_cbc.h
esurfing/inc/utils/: Logger.h  PlatformUtils.h  Shutdown.h  SimThread.h
esurfing/inc/webserver/: WebServer.h
esurfing/src/: Client.c  Constants.c  DialerApp.c  DialerClient.c  Main.c  NetClient.c  NetworkStatus.c  Options.c  PlatformUtils.c  Session.c  States.c
esurfing/src/cipher/: CipherFactory.c  CipherUtils.c  KeyData.c  cipher_factory.c  key_data.c
esurfing/src/cipher/impl/: aes_cbc.c  aes_cbc_pc.c  aes_ecb.c  aes_ecb_pc.c  des_ecb_six_pc.c  desede_cbc.c  desede_cbc_pc.c  desede_ecb.c  mod_xtea.c  mod_xtea_cbc_triple_pc.c  mod_xtea_iv.c  mod_xtea_pc.c  sm4_cbc.c  sm4_ecb.c  zuc.c
esurfing/src/headFiles/: Client.h  Constants.h  DialerClient.h  NetClient.h  NetworkStatus.h  Options.h  Session.h  States.h
esurfing/src/headFiles/cipher/: CipherInterface.h  CipherUtils.h  cipher_interface.h
esurfing/src/headFiles/cipher/impl/: aes_cbc.h  aes_cbc_pc.h  aes_ecb.h  aes_ecb_pc.h  des_ecb_six_pc.h  desede_cbc.h  desede_cbc_pc.h  desede_ecb.h  mod_xtea.h  mod_xtea_cbc_triple_pc.h  mod_xtea_iv.h  mod_xtea_pc.h  sm4_cbc.h  sm4_ecb.h  zuc.h
esurfing/src/headFiles/utils/: ByteArray.h  Logger.h  PlatformUtils.h  Shutdown.h  ShutdownHook.h  XMLParser.h
esurfing/src/headFiles/webserver/: WebServer.h
esurfing/src/utils/: ByteArray.c  CheckAdapters.c  Logger.c  PlatformUtils.c  Shutdown.c  ShutdownHook.c  XMLParser.c  minIni.c
esurfing/src/web_root/: index.html
esurfing/src/web_root/assets/css/: about.css  basic.css  logs.css  settings.css
esurfing/src/web_root/assets/js/: about.js  logs.js  settings.js
esurfing/src/web_root/assets/web/: about.html  dashboard.html  logs.html  settings.html
esurfing/src/webserver/: WebServer.c
esurfing/web_root/assets/css/: basic.css  dashboard.css  logs.css
esurfing/web_root/assets/js/: basic.js  dashboard.js  logs.js  settings.js
esurfing/web_root/assets/web/: dashboard.html  settings.html
esurfingclient/: Makefile
esurfingclient/esurfing/: CMakeLists.txt  Main.c  version.cmake.in
esurfingclient/esurfing/inc/: DialerClient.h  NetClient.h  States.h
esurfingclient/esurfing/inc/cipher/: CipherInterface.h  CipherUtils.h  KeyData.h
esurfingclient/esurfing/inc/cipher/impl/: aes_cbc.h  aes_cbc_pc.h  aes_ecb.h  aes_ecb_pc.h  des_ecb_six_pc.h  desede_cbc.h  desede_cbc_pc.h  desede_ecb.h  mod_xtea.h  mod_xtea_cbc_triple_pc.h  mod_xtea_iv.h  mod_xtea_pc.h  sm4_cbc.h  sm4_ecb.h  zuc.h
esurfingclient/esurfing/inc/utils/: Logger.h  PlatformUtils.h  Shutdown.h  SimThread.h
esurfingclient/esurfing/inc/webserver/: WebServer.h
esurfingclient/esurfing/portal/: dashboard.html  index.html
esurfingclient/esurfing/portal/assets/js/: main.js
esurfingclient/esurfing/src/: DialerClient.c  NetClient.c  States.c
esurfingclient/esurfing/src/cipher/: CipherFactory.c
esurfingclient/esurfing/src/cipher/impl/: aes_cbc_pc.c  aes_ecb.c  aes_ecb_pc.c  desede_cbc.c  desede_cbc_pc.c  mod_xtea.c  mod_xtea_iv.c  mod_xtea_pc.c  sm4_cbc.c
esurfingclient/esurfing/src/utils/: Logger.c  PlatformUtils.c  Service.c  Shutdown.c  SimThread.c  cJSON.c
esurfingclient/esurfing/src/webserver/: WebServer.c
esurfingclient/esurfing/web_root/: index.html
esurfingclient/esurfing/web_root/assets/css/: basic.css  dashboard.css  settings.css
esurfingclient/esurfing/web_root/assets/js/: about.js  basic.js  logs.js
esurfingclient/esurfing/web_root/assets/web/: about.html  dashboard.html  logs.html  settings.html
headFiles/: NetClient.h  NetworkStatus.h  PlatformUtils.h  States.h
luci-app-esurfingclient/: Makefile
src/: Client.c  Constants.c  DialerApp.c  NetClient.c  NetworkStatus.c  Options.c  PlatformUtils.c  Session.c  States.c
(+81 files in other folders)
